# sequenceframeplugin

./: .gitignore  README.md
Application/: CMakeLists.txt
Application/lib/Win32/GL_vs2015_Release_DLL/: SequenceFramePlugin.lib
Application/lib/Win64/GL_vs2019_Release_DLL/: SequenceFramePlugin.dll_
Application/src/executable/: CMakeLists.txt
Application/src/executable/src/: sequenceframeplugin_main.cpp
Application/src/plugin/: CMakeLists.txt
Application/src/plugin/src/: decompressor.cpp  decompressor.h  filemapping.cpp  filemapping.h  resource.h  sequenceframeplugin.cpp  sequenceframeplugin.hpp  sequenceframeplugin.rc  sequenceframeplugin_module.cpp  sequenceframeplugin_module.hpp
SequenceFrameTools/: README  TexturePacker.py  rename.bat
Tool_project/: SequenceFramePlugin.kzproj
Tool_project/Generic/: _ETC2_RGBA8.lz4
Tool_project/Images/compressed/: DefaultBackground.png.KZBExport.cache  DefaultCubeMap.dds.KZBExport.cache  DefaultTextureImage.png.KZBExport.cache
Tool_project/Images/cubemaps/compressed/: DefaultCubeMap.dds negX.png.KZBExport.cache  DefaultCubeMap.dds negY.png.KZBExport.cache  DefaultCubeMap.dds negZ.png.KZBExport.cache  DefaultCubeMap.dds posX.png.KZBExport.cache  DefaultCubeMap.dds posY.png.KZBExport.cache  DefaultCubeMap.dds posZ.png.KZBExport.cache
Tool_project/Shaders/: VertexPhong.frag.glsl  VertexPhong.vert.glsl
